--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXSlider?>
 <?import com.jfoenix.controls.JFXTabPane?>
@@ -14,9 +13,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@../themes/PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
+<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
    <children>
-      <Label id="_label" fx:id="_currentName" alignment="CENTER" layoutX="109.0" layoutY="53.0" prefHeight="68.0" prefWidth="242.0" text="Name">
+      <Label id="_label" fx:id="_currentName" alignment="CENTER" layoutX="37.0" layoutY="53.0" prefHeight="68.0" prefWidth="381.0" text="Name">
          <font>
             <Font size="48.0" />
          </font>
@@ -28,7 +27,7 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <JFXButton id="_button" fx:id="_playAllButton" buttonType="RAISED" layoutX="159.0" layoutY="143.0" onAction="#playAllClicked" prefHeight="47.0" prefWidth="153.0" text="Play">
+      <JFXButton id="_button" fx:id="_playAllButton" buttonType="RAISED" layoutX="151.0" layoutY="144.0" onAction="#playAllClicked" prefHeight="47.0" prefWidth="153.0" text="Play">
          <font>
             <Font size="36.0" />
          </font>
@@ -40,7 +39,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_button" fx:id="_recordButton" buttonType="RAISED" layoutX="567.0" layoutY="65.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
+      <JFXButton id="_button" fx:id="_recordButton" buttonType="RAISED" layoutX="99.0" layoutY="386.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
          <font>
             <Font size="36.0" />
          </font>
@@ -52,7 +51,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_button" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="466.0" layoutY="93.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play">
+      <JFXButton id="_button" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="36.0" layoutY="407.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play">
          <font>
             <Font size="14.0" />
          </font>
@@ -63,16 +62,16 @@
                </font>
             </Tooltip>
          </tooltip></JFXButton>
-      <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" layoutX="595.0" layoutY="93.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="119.0" text="Save">
+      <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" layoutX="165.0" layoutY="407.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="109.0" text="Save">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
-      <JFXSlider fx:id="_volumeSlider" blockIncrement="1.0" layoutX="289.0" layoutY="294.0" onDragDone="#volumeSliderDragged" prefHeight="14.0" prefWidth="168.0" value="30.0" />
+      <JFXSlider fx:id="_volumeSlider" blockIncrement="1.0" layoutX="144.0" layoutY="222.0" onDragDone="#volumeSliderDragged" prefHeight="16.0" prefWidth="229.0" value="30.0" />
       <JFXButton id="_button" fx:id="_prevButton" buttonType="RAISED" layoutX="50.0" layoutY="154.0" onAction="#prevClicked" prefHeight="47.0" prefWidth="85.0" text="Previous">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
-      <JFXButton id="_button" fx:id="_nextButton" buttonType="RAISED" layoutX="341.0" layoutY="154.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" text="Next">
+      <JFXButton id="_button" fx:id="_nextButton" buttonType="RAISED" layoutX="318.0" layoutY="154.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" text="Next">
          <font>
             <Font size="14.0" />
          </font>
@@ -84,8 +83,8 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXProgressBar fx:id="_micSensitivityBar" layoutX="26.0" layoutY="301.0" />
-      <JFXButton id="_button" fx:id="_deleteButton" buttonType="RAISED" layoutX="731.0" layoutY="93.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
+      <JFXProgressBar fx:id="_micSensitivityBar" layoutX="137.0" layoutY="506.0" />
+      <JFXButton id="_button" fx:id="_deleteButton" buttonType="RAISED" layoutX="301.0" layoutY="407.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
          <font>
             <Font size="14.0" />
          </font>
@@ -97,7 +96,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXTabPane layoutX="536.0" layoutY="150.0" prefHeight="338.0" prefWidth="303.0">
+      <JFXTabPane layoutX="535.0" layoutY="123.0" prefHeight="346.0" prefWidth="303.0">
          <tabs>
             <Tab id="_tab" text="Recordings ">
                <content>
@@ -108,7 +107,7 @@
                </content></Tab>
          </tabs>
       </JFXTabPane>
-      <JFXButton id="_button" fx:id="_playSelectedButton" buttonType="RAISED" layoutX="536.0" layoutY="519.0" onAction="#playSelectedClicked" prefHeight="36.0" prefWidth="119.0" text="Play Selected ">
+      <JFXButton id="_button" fx:id="_playSelectedButton" buttonType="RAISED" layoutX="535.0" layoutY="500.0" onAction="#playSelectedClicked" prefHeight="36.0" prefWidth="142.0" text="Play Selected ">
          <font>
             <Font size="14.0" />
          </font>
@@ -120,7 +119,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_button" fx:id="_deleteSelectedButton" buttonType="RAISED" layoutX="688.0" layoutY="519.0" onAction="#deleteSelectedClicked" prefHeight="36.0" prefWidth="119.0" text="Delete Selected">
+      <JFXButton id="_button" fx:id="_deleteSelectedButton" buttonType="RAISED" layoutX="696.0" layoutY="500.0" onAction="#deleteSelectedClicked" prefHeight="36.0" prefWidth="142.0" text="Delete Selected">
          <font>
             <Font size="14.0" />
          </font>
@@ -132,9 +131,9 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <Label id="_label" layoutX="325.0" layoutY="243.0" prefHeight="36.0" prefWidth="96.0" text="Volume" textAlignment="JUSTIFY">
+      <Label id="_label" layoutX="66.0" layoutY="212.0" prefHeight="36.0" prefWidth="66.0" text="Volume" textAlignment="JUSTIFY">
          <font>
-            <Font size="24.0" />
+            <Font size="15.0" />
          </font>
          <tooltip>
             <Tooltip text="Volume.">
@@ -144,9 +143,9 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <Label id="_label" layoutX="50.0" layoutY="243.0" prefHeight="36.0" prefWidth="180.0" text="Mic Sensitivity" textAlignment="JUSTIFY">
+      <Label id="_label" layoutX="93.0" layoutY="488.0" prefHeight="36.0" prefWidth="29.0" text="Mic" textAlignment="JUSTIFY">
          <font>
-            <Font size="24.0" />
+            <Font size="15.0" />
          </font>
          <tooltip>
             <Tooltip text="Your current mic sensitvity.">
@@ -156,17 +155,11 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <JFXComboBox fx:id="_userRecordingDropdown" layoutX="220.0" layoutY="475.0" prefHeight="26.0" prefWidth="194.0" />
-      <Label id="_label" fx:id="_currentName1" alignment="CENTER" layoutX="55.0" layoutY="475.0" prefHeight="26.0" prefWidth="85.0" text="Name">
-         <font>
-            <Font size="22.0" />
-         </font>
-      </Label>
-      <JFXButton id="_label" fx:id="_loop" layoutX="38.0" layoutY="404.0" onAction="#loopFiles" prefHeight="36.0" prefWidth="119.0" text="Loop">
+      <JFXButton id="_label" fx:id="_loop" layoutX="85.0" layoutY="300.0" onAction="#loopFiles" prefHeight="45.0" prefWidth="168.0" text="Loop">
          <font>
             <Font size="23.0" />
          </font>
       </JFXButton>
-      <Spinner fx:id="_loopCount" layoutX="170.0" layoutY="414.0" prefHeight="26.0" prefWidth="66.0" />
+      <Spinner fx:id="_loopCount" layoutX="276.0" layoutY="310.0" prefHeight="26.0" prefWidth="57.0" />
    </children>
 </AnchorPane>
