--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@../themes/PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
+<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@../themes/DarkPracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
    <children>
       <Label id="_label" fx:id="_currentName" alignment="CENTER" layoutX="37.0" layoutY="53.0" prefHeight="68.0" prefWidth="381.0" text="Name">
          <font>
@@ -98,7 +98,7 @@
       </JFXButton>
       <JFXTabPane layoutX="535.0" layoutY="123.0" prefHeight="346.0" prefWidth="303.0">
          <tabs>
-            <Tab id="_tab" text="Recordings ">
+            <Tab text="Recordings ">
                <content>
                   <Pane id="_pane" prefHeight="200.0" prefWidth="305.0">
                      <children>
@@ -160,6 +160,6 @@
             <Font size="23.0" />
          </font>
       </JFXButton>
-      <Spinner id="_loopNum" fx:id="_loopCount" layoutX="276.0" layoutY="310.0" prefHeight="26.0" prefWidth="57.0" />
+      <Spinner fx:id="_loopCount" layoutX="276.0" layoutY="310.0" prefHeight="26.0" prefWidth="57.0" />
    </children>
 </AnchorPane>
