--- a/src/themes/DarkPracticeSceneStyleSheet.css
+++ b/src/themes/DarkPracticeSceneStyleSheet.css
@@ -4,8 +4,9 @@
 	-fx-accent: crimson;
 }
 
-#_pane {
+#_pane, .scrollPane {
 	-fx-background-color: rgb(80, 80, 80);
+	-fx-background: rgb(80, 80, 80);
 }
 
 #_background {
@@ -18,8 +19,10 @@
 
 .jfx-tab-pane .tab-header-background {
 	-fx-background-color: rgb(50, 50, 50);
-	-fx-insets: red;
+	-fx-skin: red;
 }
+
+
 
 /**
 #_micSensitivityBar > .track, #_micSensitivityBar > .bar {
