--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXCheckBox?>
+<?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
@@ -18,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane id="_" fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="966.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane id="_" fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="966.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <JFXTabPane id="_pane">
          <tabs>
@@ -182,6 +183,11 @@
                </image>
             </ImageView>
             <JFXButton layoutX="28.0" layoutY="18.0" mnemonicParsing="false" onAction="#shopClicked" opacity="0.0" prefHeight="65.0" prefWidth="63.0" ripplerFill="#000000ba" />
+            <JFXSpinner fx:id="_databaseUploadSpinner" layoutX="14.0" layoutY="541.0" prefHeight="50.0" prefWidth="55.0" visible="false" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="14.0">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </JFXSpinner>
          </children>
       </AnchorPane>
    </center>
